<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Headphone SMS</string>
  <string name="prefs_screen_title">Headphone SMS Settings</string>

  <string name="ok">OK</string>

  <string name="enabled_summary">Read incoming messages</string>
  <string name="enabled_title">Enabled</string>

  <string name="activationMode_summary">Choose when to read messages</string>
  <string name="activationMode_title">Activation mode</string>
  <string-array name="activationMode_labels">
    <item>Always on</item>
    <item>Only with headphones</item>
  </string-array>
  <string-array name="activationMode_values">
    <item>@string/activationModeValue_always</item>
    <item>@string/activationModeValue_headphonesOnly</item>
  </string-array>

  <string name="volume_useDefault_summary">Use default call volume</string>
  <string name="volume_title">Reading volume</string>

  <string name="preferSco_summary">
    Use a Bluetooth headset if Bluetooth and headphones are available.
  </string>
  <string name="preferSco_title">Prefer Bluetooth</string>

  <string name="speech_receivedSms">SMS from</string>
  <string name="speech_receivedCall">Call from</string>

  <string name="prefsName">HeadphoneSmsPrefs</string>
  <string name="prefsKey">prefs</string>
  <string name="prefsKey_enabled">enabled</string>
  <string name="prefsKey_activationMode">activationMode</string>
  <string name="activationModeValue_always">ALWAYS_ON</string>
  <string name="activationModeValue_headphonesOnly">HEADPHONES_ONLY</string>
  <string name="prefsKey_volume">volume</string>
  <string name="prefsKey_preferSco">preferSco</string>
</resources>
